# fgg

./: CMakeLists.txt  README.md  fgg.cpp  fgg.h
cmake/: FindIGRAPH.cmake
example/: Makefile  comp_diam.c  dump_gml.c
example/boost/: Makefile  dijkstra.cpp
example/igraph/: Makefile  comp_diam.c  dump_gml.c
example/python/: draw_hexagon.py  fgg.py
example/swig/: Makefile  fgg.i  setup.py
