CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_C_FLAGS_RELEASE "-Wall -O2")
SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_BUILD_TYPE Release)

PROJECT(fgg CXX)
SET(serial "0.0.1")
SET(soserial "1")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}" /opt/local/include)
LINK_DIRECTORIES("/opt/local/lib")
ADD_LIBRARY(fgg SHARED fgg.cpp)
SET_TARGET_PROPERTIES(fgg PROPERTIES VERSION ${serial} SOVERSION ${soserial})
TARGET_LINK_LIBRARIES(fgg igraph)
INSTALL(TARGETS fgg LIBRARY DESTINATION lib)
INSTALL(FILES fgg.h DESTINATION include)

